# thincan

./: .gitignore  Cargo.toml  README.md  flake.nix
can-uds/: Cargo.toml  README.md
can-uds/src/: lib.rs
embedded-can/embedded-can-embassy-stm32/: Cargo.toml  README.md
embedded-can/embedded-can-embassy-stm32/src/: bxcan.rs  fdcan.rs  lib.rs  stm32.rs
embedded-can/embedded-can-socketcan/: Cargo.toml  README.md
embedded-can/embedded-can-socketcan/src/: lib.rs  linux.rs  non_linux.rs  tokio_impl.rs
embedded-can/embedded-can-unix-socket/: Cargo.toml  README.md
embedded-can/embedded-can-unix-socket/benches/: throughput.rs
embedded-can/embedded-can-unix-socket/src/: client.rs  frame.rs  lib.rs  server.rs  wire.rs
embedded-can/embedded-can-unix-socket/tests/: bus.rs
examples/thincan-example/: Cargo.toml
examples/thincan-example/benches/: socketcan_file_transfer.rs  socketcan_isotp_file_transfer.rs  uds_file_transfer.rs
examples/thincan-example/src/: file_transfer_bench_common.rs  main.rs
examples/thincan-example/tests/: uds_e2e_file_transfer.rs
iso-tp/can-iso-tp/: Cargo.toml  README.md  flake.nix
iso-tp/can-iso-tp/src/: address.rs  async_demux.rs  async_io.rs  async_node.rs  config.rs  demux.rs  errors.rs  helpers.rs  interface_impl.rs  lib.rs  pdu.rs  rx.rs  timer.rs  tx.rs
iso-tp/can-iso-tp/tests/: addressing.rs  async_demux_uds.rs  async_integration.rs  async_node_coverage.rs  async_recv_coverage.rs  demux_uds.rs  edge_cases.rs  integration.rs  isotp_interface.rs  kernel_socketcan.rs  no_alloc_api.rs  rx_machine.rs
iso-tp/can-isotp-interface/: Cargo.toml
iso-tp/can-isotp-interface/src/: lib.rs
iso-tp/linux-socketcan-iso-tp/: Cargo.toml
iso-tp/linux-socketcan-iso-tp/src/: lib.rs  linux.rs  non_linux.rs
msg/: person_capnp.rs
schema/: person.capnp
thincan/: Cargo.toml
thincan-file-transfer/: Cargo.toml  build.rs
thincan-file-transfer/examples/: interface_two_threads.rs  router_only.rs
thincan-file-transfer/schema/: file_transfer.capnp
thincan-file-transfer/src/: alloc_encode.rs  alloc_impl.rs  embassy_bus.rs  embassy_receiver.rs  embassy_sender.rs  heapless_encode.rs  heapless_impl.rs  lib.rs  tokio_impl.rs
thincan-file-transfer/tests/: application_dx_embassy.rs  application_dx_tokio.rs  async_sender.rs  backpressure.rs  coverage.rs  e2e_file_transfer_logs_capnp.rs  embassy_receiver.rs  heapless_no_alloc.rs  send_api.rs
thincan-log/: Cargo.toml  build.rs
thincan-log/schema/: log.capnp
thincan-log/src/: lib.rs
thincan-schema/: Cargo.toml  build.rs
thincan-schema/schema/: message.capnp  monster.fbs  person.capnp  rust.capnp
thincan-schema/src/: lib.rs
thincan/src/: capnp.rs  isotp.rs  lib.rs
thincan/tests/: async_iso_tp_dispatch.rs  async_support.rs  capnp_person.rs  coverage_dispatch.rs  e2e_file_transfer_logs.rs  no_std_smoke.rs  transport_and_validation.rs
thincan/tests/support/: README.md  person_capnp.rs
thincan/tests/support/schema/: person.capnp
