[package]
name = "thincan"
version = "0.1.0"
edition = "2024"

[features]
default = ["embedded"]
embedded = []
socketcan = ["bitflags", "libc", "nix", "thiserror"]

[dependencies]
embedded-can-mock = { path = "../../embedded-can-mock" }

embedded-can = "0.4.1"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
bitflags = { version = "2.6.0", optional = true }
libc = { version = "0.2.161", optional = true }
nix = { version = "0.27.1", features = ["net"], optional = true }
thiserror = { version = "1.0.69", optional = true }
