[package]
name = "thincan"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = { version = "0.25.0", default-features = false, features = [
    "unaligned",
], optional = true }
capnpc = { version = "0.25.0", optional = true }
embedded-can = "0.4.1"
embedded-can-interface = "0.1.1"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
can-iso-tp = { path = "../iso-tp/can-iso-tp", version = "0.1.0", default-features = false, features = [
    "isotp-interface",
] }
can-isotp-interface = { path = "../iso-tp/can-isotp-interface", version = "0.1.0" }

[features]
default = ["std"]
capnp = ["dep:capnp"]
capnp-gen = ["std", "dep:capnpc"]
std = []
async = []
isotp-uds = ["can-iso-tp/uds"]

[dev-dependencies]
embedded-can-mock = "0.1.0"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }

[[bin]]
name = "gen_test_capnp"
path = "src/bin/gen_test_capnp.rs"
required-features = ["capnp-gen"]
