[package]
name = "thincan-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.23", features = ["derive"] }
can-iso-tp = { path = "../../iso-tp/can-iso-tp", features = ["std", "uds"] }
can-isotp-interface = { path = "../../iso-tp/can-isotp-interface" }
can-uds = { path = "../../can-uds" }
embedded-can = "0.4.1"
embedded-can-interface = "0.1.1"
thincan = { path = "../../thincan", default-features = false, features = [
    "std",
    "capnp",
    "isotp-uds",
] }

embedded-can-unix-socket = { path = "../../embedded-can/embedded-can-unix-socket", optional = true }
embedded-can-socketcan = { path = "../../embedded-can/embedded-can-socketcan", optional = true }
linux-socketcan-iso-tp = { path = "../../iso-tp/linux-socketcan-iso-tp", optional = true }

[features]
default = ["uds"]
uds = ["dep:embedded-can-unix-socket"]
unix-socket = ["uds"]
socketcan = ["dep:embedded-can-socketcan"]
# Kernel ISO-TP benches still need a raw CAN backend for the `thincan-example` binary to build
# under `cargo bench` (Cargo builds the package's binary targets too).
socketcan-isotp = [
    "dep:linux-socketcan-iso-tp",
    "socketcan",
]

[[bin]]
name = "uds-server"
path = "src/bin/uds-server.rs"
required-features = ["uds"]
