[package]
name = "thincan-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.23", features = ["derive"] }
can-iso-tp = { path = "../../iso-tp/can-iso-tp", features = ["std", "uds"] }
can-isotp-interface = { path = "../../iso-tp/can-isotp-interface" }
can-uds = { path = "../../can-uds" }
capnp = { version = "0.25.0", default-features = false, features = ["unaligned"] }
embedded-can = "0.4.1"
embedded-can-interface = "0.1.1"
rand = { version = "0.9.2", features = ["std"] }
thincan = { path = "../../thincan", default-features = false, features = [
    "std",
    "capnp",
] }
thincan-file-transfer = { path = "../../thincan-file-transfer", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }

embedded-can-unix-socket = { path = "../../embedded-can/embedded-can-unix-socket", optional = true }
embedded-can-socketcan = { path = "../../embedded-can/embedded-can-socketcan", optional = true }
linux-socketcan-iso-tp = { path = "../../iso-tp/linux-socketcan-iso-tp", optional = true }

[features]
default = ["uds"]
uds = ["dep:embedded-can-unix-socket"]
unix-socket = ["uds"]
socketcan = ["dep:embedded-can-socketcan"]
# Kernel ISO-TP benches still need a raw CAN backend for the `thincan-example` binary to build
# under `cargo bench` (Cargo builds the package's binary targets too).
socketcan-isotp = [
    "dep:linux-socketcan-iso-tp",
    "socketcan",
]

[[bin]]
name = "uds-server"
path = "src/bin/uds-server.rs"
required-features = ["uds"]

[[bin]]
name = "file-transfer-bench-a"
path = "src/bin/file-transfer-bench-a.rs"
required-features = ["uds"]

[[bin]]
name = "file-transfer-bench-b"
path = "src/bin/file-transfer-bench-b.rs"
required-features = ["uds"]
