[package]
name = "linux-socketcan-iso-tp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Linux kernel ISO-TP socket backend implementing can-isotp-interface"
repository = "https://github.com/conroy-cheers/thincan"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
can-isotp-interface = { path = "../can-isotp-interface", version = "0.1.0" }
can-uds = { path = "../../can-uds", version = "0.1.0" }
embedded-can = "0.4.1"
tokio = { version = "1", optional = true, features = ["io-util", "net", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
socket2 = "0.5.10"
socketcan = "3.5.0"

[dev-dependencies]
